<resources>
    <string name="app_name">Ingresar contacto</string>

    <string name="action_settings">Settings</string>

    <string name="hint_name">Nombre Completo</string>
    <string name="hint_email">Correo</string>
    <string name="hint_password">Password</string>
    <string name="hint_mobile">Telefono</string>
    <string name="hint_address">Descripción de contacto</string>
    <string name="btn_sign_up">Siguiente</string>


    <string name="title_activity_confirmacion_datos">Confirmar Datos</string>
    <string name="btn_edit">Editar Datos</string>
    <string name="nombre">Luis Villa</string>
    <string name="mobile">7224310643</string>
    <string name="email">villa_vargas@hotmail.com</string>
    <string name="date">28/11/1980</string>
    <string name="descr">Algo</string>


</resources>